# VAD-Sensor-Bridge

./: .gitignore  README.md
bench/: bench_compare.sh  debug_udp_recv.py  gen_test_wav.py  load_gen.py  send_sensor.py  stream_mic_esp.py  test_audio_roundtrip.py  test_esp_protocol.py  test_mqtt.sh  test_openai_realtime.py  test_prompt_mode.py  udp_load_gen.py
c-udp-mqtt/: Makefile
c-udp-mqtt/include/: ring_buffer.h  sensor.h  stats.h  vad.h
c-udp-mqtt/src/: main.c
rust-udp-mqtt/: Cargo.toml
rust-udp-mqtt/src/: api.rs  config.rs  esp_audio_protocol.rs  main.rs  mqtt_publisher.rs  persona.rs  sensor.rs  sensor_smoother.rs  stats.rs  transport_mqtt.rs  transport_openai.rs  transport_tcp.rs  transport_udp.rs  udp_receiver.rs  vad.rs  vad_response.rs
