[package]
name = "vad-sensor-bridge"
version = "0.1.0"
edition = "2021"
description = "High-performance UDP→MQTT QoS 0 sensor data bridge"

[dependencies]
# Async runtime — tokio with io_uring on Linux for max perf
tokio = { version = "1", features = ["full"] }
# Zero-copy MQTT v5 client, QoS 0 fire-and-forget
rumqttc = { version = "0.24", features = ["use-rustls"] }
# Fast serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# TTY detection for ANSI color control
atty = "0.2"
# Stats / metrics
hdrhistogram = "7"
# CLI args
clap = { version = "4", features = ["derive"] }
# Byte manipulation
bytes = "1"
# Socket options (SO_REUSEPORT)
socket2 = { version = "0.5", features = ["all"] }
# Error handling
anyhow = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
