[package]
name = "vad-sensor-bridge"
version = "0.2.0"
edition = "2021"
description = "UDP sensor bridge with VAD + OpenAI Realtime API for ESP32 audio"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# JSON (OpenAI WebSocket events)
serde_json = "1"
# Serialisation (persona API)
serde = { version = "1", features = ["derive"] }
# HTTP server (persona REST API)
axum = "0.7"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# TTY detection for ANSI color control
atty = "0.2"
# CLI args
clap = { version = "4", features = ["derive", "env"] }
# Socket options (SO_REUSEPORT)
socket2 = { version = "0.5", features = ["all"] }
# Error handling
anyhow = "1"
# Static OpenSSL for musl builds
openssl = { version = "0.10", features = ["vendored"] }
# WebSocket client (OpenAI Realtime API)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
# Async stream utilities (for WS split)
futures-util = "0.3"
# Base64 encoding for audio chunks
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
